test/files/neg/t12159f.check
t.scala:7: warning: match may not be exhaustive.
It would fail on the following input: W()
    x match {
    ^
t.scala:12: warning: match may not be exhaustive.
It would fail on the following inputs: Z(), Z2()
    x match {
    ^
error: No warnings can be incurred under -Werror.
2 warnings
1 error
